WIP: refactor to new domain modeling